test_suite5/ALAN/test_suite/alan-2022-examples/failing/000500_mutation.alan
source C begin = HR5; relax end
